--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "angular": "^1.7.9",
     "angular-route": "^1.7.9",
     "d3": "^5.16.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "topojson": "^3.0.2"
   }
 }
